adiciona suporte a fotos de perfil  e nicknames

--- a/index.html
+++ b/index.html
@@ -4,24 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chat</title>
+    <title>Document</title>
 </head>
 <body>
+    <input type="file" id="img" name="img" accept="image/*">
+    <input type="text" id="nickname"/>
+    <button type="button" id="send">enviar</button>
 
-<ul id="messages">
-
-    
-</ul>
-
-
-    <textarea id="txt" name="w3review" rows="4" cols="50"></textarea>
-
-    <button type="button" id="btn">Enviar</button>
-
-
-
-
-
-    <script src="script.js"></script>
+    <script src="begin.js"></script>
 </body>
 </html>
